Fixed blockquote text wrap bug, improved keyboard accessibility

--- a/src/index.css
+++ b/src/index.css
@@ -279,6 +279,7 @@ path {
 .preview blockquote {
 	background-color: var(--light-gray);
 	color: var(--dark-gray-500);
+	text-wrap: wrap;
 }
 
 .preview pre::before,
